--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>maggilicious.com</title>
+    <title>maggilicious.com - Generative Art Wallpaper & Screensaver</title>
+    <!-- SEO Tags -->
+    <meta name="description" content="Maggilicious.com: An interactive generative art experience. Click to conjure new, beautiful universes of particles. Perfect for a digital wallpaper or screensaver.">
+    <meta name="keywords" content="generative art, interactive art, wallpaper, screensaver, digital art, creative coding, three.js, webgl, abstract visualization, maggilicious">
+    <meta name="author" content="Info@manpasand.com">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://css2?family=Inter:wght@300;400;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -56,6 +61,14 @@
             width: 100%;
             animation: fadeIn 2s ease-in-out;
         }
+        .footer-credit {
+            font-size: 0.8rem;
+            color: rgba(255, 255, 255, 0.4);
+            text-align: center;
+            width: 100%;
+            margin-top: 0.5rem;
+            animation: fadeIn 2s ease-in-out;
+        }
         
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -74,6 +87,9 @@
             .footer-text {
                 font-size: 0.8rem;
             }
+            .footer-credit {
+                font-size: 0.7rem;
+            }
         }
     </style>
 </head>
@@ -87,6 +103,7 @@
         </header>
         <footer>
             <p class="footer-text">Click anywhere to conjure a new universe.</p>
+            <p class="footer-credit">Designed & Developed by Info@manpasand.com</p>
         </footer>
     </div>
 
@@ -229,3 +246,4 @@
     </script>
 </body>
 </html>
+
